# compiler-project

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: grammar.md  language_spec.md
examples/: factorial.src  hello.src  struct_example.src
src/: __main__.py  main.py
src/ir/: basic_block.py  cli.py  ir_generator.py  ir_instructions.py
src/lexer/: __init__.py  cli.py  error.py  scanner.py  token.py
src/parser/: ast.py  cli.py  dot_generator.py  json_generator.py  parser.py  pretty_printer.py  test_integration.py  test_parser_errors.py  test_performance.py  test_visitors.py  visitor.py
src/semantic/: analyzer.py  cli.py  errors.py  symbol_table.py  type_system.py
tests/: test_lexer.py  test_parser.py  test_runner.py
tests/ir/: test_ir_generator.py
tests/lexer/invalid/: test_invalid_char.expected  test_invalid_char_at_sign.expected  test_invalid_char_at_sign.src  test_invalid_char_dollar.expected  test_invalid_char_dollar.src  test_invalid_char_hash.expected  test_invalid_char_hash.src  test_malformed_number_trailing_dot.expected  test_malformed_number_two_dots.expected  test_only_comment.src  test_only_whitespace.src  test_unterminated_comment.expected  test_unterminated_comment.src  test_unterminated_comment_eof.expected  test_unterminated_comment_eof.src  test_unterminated_string.expected  test_unterminated_string.src  test_unterminated_string_with_content.expected  test_unterminated_string_with_content.src
tests/lexer/valid/: test_all_keywords.expected  test_arithmetic_operators.expected  test_arithmetic_operators.src  test_array_access.expected  test_array_access.src  test_assignment_operators.expected  test_assignment_operators.src  test_basic_identifiers_mac.src  test_basic_identifiers_windows.expected  test_basic_identifiers_windows.src  test_boolean_expressions.expected  test_boolean_expressions.src  test_complex_expression.expected  test_complex_expression.src  test_delimiters.expected  test_float_literals.expected  test_float_literals.src  test_function_declaration.expected  test_identifiers.expected  test_identifiers.src  test_integer_literals.expected  test_integer_literals_mac.src  test_integer_literals_windows.src  test_keywords.expected  test_keywords.src  test_logical_operators.expected  test_logical_operators.src  test_mixed_comments.expected  test_mixed_comments.src  test_mixed_tokens.expected  test_mixed_tokens.src  test_multiline_comments.expected  test_multiline_comments.src  test_nested_blocks.expected  test_nested_blocks.src  test_relational_operators.expected  test_relational_operators.src  test_single_line_comments.expected  test_single_line_comments.src  test_string_literals.expected  (+2 more)
tests/semantic/: test_semantic.py
