[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minicompiler"
version = "0.1.0"
description = "A simplified C-like compiler (Sprint 1: Lexical Analysis)"
authors = [
    {name = "Your Team", email = "team@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["compiler", "lexer", "programming-language"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Compilers",
]

[project.urls]
Homepage = "https://github.com/yourusername/minicompiler"
Repository = "https://github.com/yourusername/minicompiler.git"
Documentation = "https://github.com/yourusername/minicompiler/blob/main/README.md"

[project.scripts]
compiler = "src.lexer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]