[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minicompiler"
version = "0.4.0"
description = "MiniCompiler - учебный компилятор для C-подобного языка"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Ivan Morst"}
]
keywords = ["compiler", "educational", "mini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "pytest-cov"]

[project.scripts]
compiler = "src.main:main"

[tool.setuptools]
packages = ["src", "src.lexer", "src.parser", "src.semantic", "src.ir", "src.utils"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"